# kurec

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  Dockerfile-web  LICENSE  README.md  biome.json  compose.yml  kurec.devin.md  kurec.log.ansi  kurec.yml  package.json  pnpm-lock.yaml  programs.json  record.sh  recorde.sh  run-kurec.kdl  select_current.sh  select_recent.sh  services.json
.cargo/: config.toml
.clinerules/: 01_general.md  02_git.md  03_github.md  10_coding.md  10_documentation.md  20_rust.md  90_postmortem.md  rust_01_design.md
.devcontainer/: Dockerfile  compose.yml  devcontainer.json  startup.sh
.github/workflows/: rust-ci.yml
docs/: crate_naming.md  design.md  job.md  mirakc-api.json  mirakc_event_handling.md  mirakc_infra_test_strategy.md  overview.md  sequence.md  stream_worker.md
frontend/: package.json
kurec/: Cargo.toml
kurec-old/: Cargo.toml
kurec-old/src/: main.rs
kurec-proto/: Cargo.toml  build.rs
kurec-proto/src/: lib.rs
kurec/src/: main.rs
kurec/src/adapter/: mirakc.rs  nats.rs
kurec/src/domain/: events.rs
kurec/src/interface/: mod.rs
proto/: kurec.proto
rust/app/: Cargo.toml
rust/app/macros/: Cargo.toml
rust/app/macros/src/: config_parser.rs  lib.rs
rust/app/src/: lib.rs  main.rs  streams_def.rs
rust/app/src/cmd/: epg_updater.rs  mirakc_events.rs  mod.rs
rust/app/src/worker/: builder.rs  mod.rs  stream_worker.rs  worker_base.rs
rust/app/src/workers/: epg_updater_worker.rs  epg_worker.rs  mod.rs
rust/app/tests/: stream_worker_test.rs  worker_test.rs
rust/libs/domain/: Cargo.toml
rust/libs/domain/src/: event.rs  lib.rs
rust/libs/domain/src/dtos/: mod.rs  version_dto.rs
rust/libs/domain/src/events/: kurec_events.rs  mirakc_events.rs  mod.rs
rust/libs/domain/src/handlers/: epg_update_handler.rs  mirakc_event_handler.rs  mod.rs
rust/libs/domain/src/models/: epg.rs  mod.rs  version.rs
rust/libs/domain/src/ports/: event_sink.rs  event_source.rs  mirakc_api.rs  mod.rs
rust/libs/domain/src/ports/notifiers/: epg_notifier.rs  mod.rs
rust/libs/domain/src/ports/repositories/: kurec_program_repository.rs  mirakc_event_repository.rs  mod.rs  version_repository.rs
rust/libs/domain/src/usecases/: mirakc_event_usecase.rs  mod.rs  version_usecase.rs
rust/libs/infra/common/: Cargo.toml
rust/libs/infra/common/src/: ack.rs  ackable_event.rs  event_source.rs  lib.rs
rust/libs/infra/jetstream/: Cargo.toml
rust/libs/infra/jetstream/src/: ack.rs  config.rs  error.rs  event_stream.rs  js_publisher.rs  js_subscriber.rs  lib.rs  message.rs
rust/libs/infra/jetstream/tests/: js_pubsub_mock_test.rs  js_pubsub_test.rs  setup_all_stream.rs
rust/libs/infra/kvs/: Cargo.toml
rust/libs/infra/kvs/src/: error.rs  lib.rs  nats_kv.rs
rust/libs/infra/macros/: Cargo.toml
rust/libs/infra/macros/src/: config_parser.rs  lib.rs
rust/libs/infra/mirakc/: Cargo.toml
rust/libs/infra/mirakc/rust/libs/infra/mirakc/tests/fixtures/: _api_version.json
rust/libs/infra/mirakc/src/: ack.rs  error.rs  factory.rs  lib.rs  mirakc_api_impl.rs  mirakc_client.rs  mirakc_sse_source.rs
rust/libs/infra/mirakc/src/repositories/: domain_version_repository.rs  mirakc_event_repository_impl.rs  mod.rs  version_repository_impl.rs
rust/libs/infra/mirakc/tests/: mirakc_client_test.rs  recording_test.rs  version_repository_test.rs
rust/libs/infra/mirakc/tests/fixtures/: api_version.json
rust/libs/infra/nats/: Cargo.toml
rust/libs/infra/nats/src/: lib.rs
rust/libs/shared/core/: Cargo.toml
rust/libs/shared/core/src/: error_handling.rs  error_handling_test.rs  event.rs  event_metadata.rs  event_publisher.rs  event_sink.rs  event_source.rs  event_subscriber.rs  event_subscriber_test.rs  lib.rs  stream_worker.rs  stream_worker_test.rs  streams.rs  streams_def.rs  worker.rs  worker_test.rs
rust/libs/shared/core/src/dtos/: mirakc_event.rs  mod.rs  version_dto.rs
rust/libs/shared/core/src/repositories/: mod.rs  version_repository.rs
rust/libs/shared/macros/: Cargo.toml
rust/libs/shared/macros/examples/: stream_worker_example.rs
rust/libs/shared/macros/src/: define_streams.rs  event.rs  kvs.rs  lib.rs  stream.rs  stream_worker.rs
rust/libs/shared/macros/tests/: has_trait.rs  kvs_test.rs  runtime_streamdef.rs  stream_worker_test.rs  ui_macro.rs
rust/libs/shared/macros/tests/ui/: macro_fail.rs  macro_fail.stderr  macro_pass.rs  macro_pass_enum.rs  mod.rs
rust/libs/shared/macros/tests/ui/kvs_fail/: fail_missing_name.rs  fail_missing_name.stderr
rust/libs/shared/macros/tests/ui/kvs_pass/: pass_basic.rs
scripts/: gen_mirakc_client.sh  record_mirakc_api.sh  reset_js_streams.sh  reset_meilisearch.sh  test_mirakc_infra.sh  test_mirakc_real.sh  typegen.sh
server/kurec/: Cargo.toml  kurec.yml
server/kurec-adapter/: Cargo.toml
server/kurec-adapter/src/: lib.rs  meilisearch.rs  mirakc.rs  mirakc_events.rs  nats.rs  ogp.rs
server/kurec-dav-test/: Cargo.toml
server/kurec-dav-test/src/: main.rs
server/kurec-interface/: Cargo.toml
server/kurec-interface/src/: kurec_config.rs  lib.rs
server/kurec-interface/src/document/: program.rs
server/kurec-interface/src/kvs/: mod.rs  rule.rs
server/kurec-interface/src/message/: mod.rs
server/kurec-interface/src/mirakc/: events.rs  mirakurun.rs  mod.rs
server/kurec-interface/src/storage/: mod.rs
server/kurec-proto/: Cargo.toml  build.rs
server/kurec-proto/src/: lib.rs
server/kurec/src/: main.rs
server/kurec/src/domain/: encoder.rs  epg.rs  events.rs  initialize.rs  mod.rs  ogp.rs  rule.rs
server/kurec/src/domain/epg/: collector.rs  mod.rs
server/mirakc-client/: Cargo.toml  README.md
src/: kurec_config.rs  lib.rs  main.rs
src/adapter/: meilisearch.rs  mirakc.rs  mod.rs  nats_jetstream.rs  sse_stream.rs
src/cmd/: mod.rs  rule_meilisearch.rs  sse_converter.rs  sse_epg.rs  sse_record.rs  stream_record.rs
src/config/: kurec_config.rs
src/domain/: meili_rule.rs
src/examples/: README.md  check-minio.rs  debug-stream.rs  nats-kv-test.rs
src/message/: event.rs  jetstream_message.rs  mod.rs  (+1 more)
web/: package.json  pnpm-lock.yaml
(+213 files in other folders)
