[workspace]

resolver = "2"
members = [
  # old implementation
  "server/kurec",
  "server/kurec-adapter",
  "server/kurec-interface",
  "server/mirakc-client",
  # new implementation
  "rust/libs/kurec_shared",
  "rust/libs/infra/stream", "rust/libs/infra/stream_macro",
]

[workspace.package]
version = "0.0.1"
authors = ["KuRec Team"]
description = "KuRec - Simple, Easy, Secure and Safety Recording System"
documentation = "https://kurec-tool.github.io"
edition = "2021"
