[workspace]

resolver = "2"
members = [
  # old implementation
  # "server/kurec",
  # "server/kurec-adapter",
  # "server/kurec-interface",

  # generated mirakc client by openapi-generator
  "server/mirakc-client",

  # new implementation
  "rust/libs/shared/core",
  "rust/libs/shared/macros",
  "rust/libs/domain",
  "rust/libs/infra/jetstream",
  "rust/libs/infra/mirakc",
  "rust/libs/infra/kvs", # 追加
  "rust/app",
]

[workspace.package]
version = "0.0.1"
authors = ["KuRec Team"]
description = "KuRec - Simple, Easy, Secure and Safety Recording System"
documentation = "https://kurec-tool.github.io"
edition = "2021"
