[workspace]

resolver = "2"
members = [
  # old implementation
  # "server/kurec",
  # "server/kurec-adapter",
  # "server/kurec-interface",

  # generated mirakc client by openapi-generator
  "server/mirakc-client",

  # new implementation
  "rust/libs/shared/core",
  "rust/libs/shared/macros",
  "rust/libs/domain",
  "rust/libs/infra/jetstream",
  "rust/libs/infra/mirakc",
  "rust/libs/infra/kvs", # 追加
  "rust/libs/infra/nats", # 新しいクレートを追加
  "rust/app",
]

[workspace.dependencies]
# async-nats のバージョンを一元管理 (feature 指定は不要)
async-nats = { version = "0.40.0" }
# 他の共通依存関係もここに追加可能

[workspace.package]
version = "0.0.1"
authors = ["KuRec Team"]
description = "KuRec - Simple, Easy, Secure and Safety Recording System"
documentation = "https://kurec-tool.github.io"
edition = "2021"
