[package]
name = "kurec-app"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
futures = "0.3.31"
humantime = "2.2.0"
inventory = "0.3.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tracing = "0.1.40"

# 内部依存関係
shared_core = { path = "../libs/shared/core" }
shared_macros = { path = "../libs/shared/macros" }
shared_infra_jetstream = { path = "../libs/infra/jetstream" }
