[package]
name = "kurec-app"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.98"
async-nats = "0.40.0" # バージョンを infra_jetstream に合わせる
async-trait = "0.1.88"
chrono = { version = "0.4.35", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.31" # StreamExt のために必要
humantime = "2.2.0"
inventory = "0.3.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# 内部依存関係
shared_core = { path = "../libs/shared/core" }
shared_macros = { path = "../libs/shared/macros" }
shared_types = { path = "../libs/shared/types" }
infra_jetstream = { path = "../libs/infra/jetstream" }
infra_mirakc = { path = "../libs/infra/mirakc" }
infra_kvs = { path = "../libs/infra/kvs" }
infra_nats = { path = "../libs/infra/nats" } # 追加
domain = { path = "../libs/domain" }
mirakc-client = { path = "../../server/mirakc-client" } # 追加
app_macros = { path = "./macros" } # 追加
