[package]
name = "kurec-adapter"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.94"
async-nats = "0.38.0"
bytes = "1.9.0"
eventsource-stream = "0.2.3"
futures = "0.3.31"
kurec-interface = { version = "0.0.1", path = "../kurec-interface" }
reqwest = { version = "^0.11", features = ["json", "stream"] }
serde = "1.0.215"
serde_json = "1.0.133"
tokio = "1.42.0"
tracing = "0.1.41"

[dev-dependencies]
mockito = "1.6.1"
