[package]
name = "kurec-interface"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
derivative = "2.2.0"
figment = { version = "0.10.19", features = ["env", "yaml"] }
linkify = "0.10.0"
mirakc-client = { version = "3.3.0-de.0", path = "../mirakc-client" }
serde = "1.0.215"
serde_json = { version = "1.0.133", features = ["indexmap", "preserve_order"] }
serde_with = { version = "3.11.0", features = ["chrono", "indexmap", "json"] }
sha1 = "0.10.6"
typeshare = "1.0.4"
url = "2.5.4"
