[package]
name = "kurec"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.94"
async-nats = "0.38.0"
awc = { version = "3.5.1", features = ["rustls"] }
bytes = "1.9.0"
clap = { version = "4.5.23", features = ["derive", "env"] }
futures = "0.3.31"
kurec-adapter = { version = "0.0.1", path = "../kurec-adapter" }
kurec-interface = { version = "0.0.1", path = "../kurec-interface" }
mirakc-client = { version = "4.0.0-de.0", path = "../mirakc-client" }
serde_json = "1.0.133"
tempfile = "3.19.1"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["async-await", "log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "tracing"] }
