[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
semver = "1.0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared_core = { path = "../shared/core" }
shared_macros = { path = "../shared/macros" }
tokio = { version = "1.0", features = ["full", "test-util"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tracing = "0.1"
