[package]
name = "infra_common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
domain = { path = "../../domain" }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
