[package]
name = "infra_jetstream"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.98"
async-nats = { workspace = true } # ワークスペースから継承
async-trait = "0.1.88"
ctor = "0.2.7"
futures = "0.3.31"
heck = "0.4.1"
humantime = "2.1" # 追加: 期間パース用
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.114"
domain = { path = "../../domain" } # 追加
shared_core = { version = "0.0.1", path = "../../shared/core" }
shared_macros = { version = "0.0.1", path = "../../shared/macros" }
thiserror = "1.0" # 追加: エラー型定義用
tracing = "0.1" # 追加
shared_types = { version = "0.0.1", path = "../../shared/types" }
infra_nats = { path = "../nats" } # NATS接続クレートを追加
infra_common = { path = "../common" } # Ack機能を提供するクレートを追加

[dev-dependencies]
testcontainers = "0.23.3"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
