[package]
name = "infra_macros"
version = "0.1.0" # バージョンは仮
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.5" # ケース変換用
humantime = "2.1" # 期間パース用

# infra_macros が kurec_domain::event::Event を参照できるようにする
# ただし、proc-macro crate は通常、他のローカルクレートに直接依存できない
# 代わりに、必要な型情報を文字列やリテラルとして扱うか、
# 関連するトレイトや型を infra_macros 自身で定義する必要があるかもしれない。
# ここではまず、StreamConfig の定義を infra_macros に移動させることを検討する。
# -> いや、StreamConfig は infra/jetstream に置くべき。
# マクロは StreamConfig のパスを知っている必要がある。
# 一旦、依存関係なしで進め、マクロ実装時にパスをハードコードするか、
# 別の方法を検討する。

# kurec_domain = { path = "../../domain" } # proc-macroからは直接依存できない
