[package]
name = "shared_core"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
futures = "0.3.31"
humantime = "2.2.0"
inventory = "0.3.20"
serde = "1.0.219"
